Verify project builds and runs clean locally